WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49797
[Qt] Transition and animation do not work with QWebView anymore
https://bugs.webkit.org/show_bug.cgi?id=49797
Summary
[Qt] Transition and animation do not work with QWebView anymore
Benjamin Poulain
Reported
2010-11-19 05:19:29 PST
Anything that trigger the creation of GraphicsLayer do not work with QWebView anymore. For example,
http://webkit.org/blog-files/pulse.html
does not show anything.
Attachments
Patch
(1.32 KB, patch)
2010-11-19 05:28 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2010-11-19 05:28:00 PST
Created
attachment 74373
[details]
Patch
WebKit Commit Bot
Comment 2
2010-11-19 21:47:12 PST
The commit-queue encountered the following flaky tests while processing
attachment 74373
[details]
: java/lc3/JSObject/ToObject-001.html Please file bugs against the tests. These tests were authored by
ap@webkit.org
. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 3
2010-11-19 21:48:17 PST
Comment on
attachment 74373
[details]
Patch Clearing flags on attachment: 74373 Committed
r72467
: <
http://trac.webkit.org/changeset/72467
>
WebKit Commit Bot
Comment 4
2010-11-19 21:48:23 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug