2010-11-19  Benjamin Poulain  <benjamin.poulain@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Transition and animation do not work with QWebView anymore
        https://bugs.webkit.org/show_bug.cgi?id=49797

        Accelerated compositing should not be enabled on QWebView without
        texture mapper.

        * WebCoreSupport/PageClientQt.h:
        (WebCore::PageClientQWidget::allowsAcceleratedCompositing):

Canonical link: https://commits.webkit.org/62929@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72467 268f45cc-cd09-0410-ab3c-d52691b4dbfc